Added functions for top_10 metrics

--- a/utils/tweets_to_mongoDB.ipynb
+++ b/utils/tweets_to_mongoDB.ipynb
@@ -53,6 +53,156 @@
   },
   {
    "cell_type": "markdown",
+   "id": "04bfeacb",
+   "metadata": {},
+   "source": [
+    "with open(\"corona-out-3\", \"r\") as f1:\n",
+    "    \n",
+    "    for line in f1:\n",
+    "        try:\n",
+    "            \n",
+    "            entity = json.loads(line)\n",
+    "\n",
+    "            # If it starts with 'RT', we want to check if the original tweet is in the DB\n",
+    "            if entity['text'].startswith('RT') : \n",
+    "                \n",
+    "                # If original tweet is not in DB, insert it\n",
+    "                if collection.find_one({'_id' : entity['retweeted_status']['id']}) is None : \n",
+    "                    \n",
+    "                    if entity['retweeted_status']['extended_tweet']['full_text'] is None:\n",
+    "                        record = { \n",
+    "                               '_id' : entity['retweeted_status']['id'],\n",
+    "                               'text': entity['retweeted_status']['text'],\n",
+    "                               'user_id' : entity['retweeted_status']['user']['id'],\n",
+    "                               'coordinates' : entity['retweeted_status']['coordinates'],\n",
+    "                               'quote_count' : entity['retweeted_status']['quote_count'], \n",
+    "                               'reply_count' : entity['retweeted_status']['reply_count'],\n",
+    "                               'retweet_count' : entity['retweeted_status']['retweet_count'],\n",
+    "                               'favorite_count' : entity['retweeted_status']['favorite_count'],\n",
+    "                               'timestamp' : entity['retweeted_status']['timestamp_ms']\n",
+    "                                 }\n",
+    "                        collection.insert_one({ \n",
+    "                               '_id' : entity['retweeted_status']['id'],\n",
+    "                               'text': entity['retweeted_status']['text'],\n",
+    "                               'user_id' : entity['retweeted_status']['user']['id'],\n",
+    "                               'coordinates' : entity['retweeted_status']['coordinates'],\n",
+    "                               'quote_count' : entity['retweeted_status']['quote_count'], \n",
+    "                               'reply_count' : entity['retweeted_status']['reply_count'],\n",
+    "                               'retweet_count' : entity['retweeted_status']['retweet_count'],\n",
+    "                               'favorite_count' : entity['retweeted_status']['favorite_count'],\n",
+    "                               'timestamp' : entity['retweeted_status']['timestamp_ms']\n",
+    "                                 }) # Insert the original tweet information\n",
+    "                        record = {  \n",
+    "                            '_id' : entity['id'],\n",
+    "                            'retweet' : 'yes',\n",
+    "                            'original_id' : entity['retweeted_status']['id'],\n",
+    "                            'text': entity['retweet_status']['text'], \n",
+    "                            'user_id' : entity['user']['id'],\n",
+    "                            'coordinates' : entity['coordinates'],\n",
+    "                            'quote_count' : entity['quote_count'], \n",
+    "                            'reply_count' : entity['reply_count'],\n",
+    "                            'retweet_count' : entity['retweet_count'],\n",
+    "                            'favorite_count' : entity['favorite_count'],\n",
+    "                            'timestamp' : entity['timestamp_ms']\n",
+    "                            }\n",
+    "                        collection.insert_one(record) # Insert the retweeted information too\n",
+    "                    \n",
+    "                    else :\n",
+    "                        record = { \n",
+    "                               '_id' : entity['retweeted_status']['id'],\n",
+    "                               'text': entity['retweeted_status']['extended_tweet']['full_text'], \n",
+    "                               'user_id' : entity['retweeted_status']['user']['id'],\n",
+    "                               'coordinates' : entity['retweeted_status']['coordinates'],\n",
+    "                               'quote_count' : entity['retweeted_status']['quote_count'], \n",
+    "                               'reply_count' : entity['retweeted_status']['reply_count'],\n",
+    "                               'retweet_count' : entity['retweeted_status']['retweet_count'],\n",
+    "                               'favorite_count' : entity['retweeted_status']['favorite_count'],\n",
+    "                               'timestamp' : entity['retweeted_status']['timestamp_ms']\n",
+    "                                 }\n",
+    "                        collection.insert_one(record) # Insert the original tweet information\n",
+    "                        record = {  \n",
+    "                            '_id' : entity['id'],\n",
+    "                            'retweet' : 'yes',\n",
+    "                            'original_id' : entity['retweeted_status']['id'],\n",
+    "                            'text': entity['retweeted_status']['extended_tweet']['full_text'], \n",
+    "                            'user_id' : entity['user']['id'],\n",
+    "                            'coordinates' : entity['coordinates'],\n",
+    "                            'quote_count' : entity['quote_count'],  \n",
+    "                            'reply_count' : entity['reply_count'],\n",
+    "                            'retweet_count' : entity['retweet_count'],\n",
+    "                            'favorite_count' : entity['favorite_count'],\n",
+    "                            'timestamp' : entity['timestamp_ms']\n",
+    "                            }\n",
+    "                        collection.insert_one(record) # Insert the retweeted information too\n",
+    "                    \n",
+    "                # If original tweet is already in the DB:\n",
+    "                else :               \n",
+    "                    if entity['retweeted_status']['extended_tweet']['full_text'] is None:\n",
+    "                        record = {  \n",
+    "                            '_id' : entity['id'],\n",
+    "                            'retweet' : 'yes',\n",
+    "                            'original_id' : entity['retweeted_status']['id'],\n",
+    "                            'text': entity['retweeted_status']['text'],\n",
+    "                            'user_id' : entity['user']['id'],\n",
+    "                            'coordinates' : entity['coordinates'],\n",
+    "                            'quote_count' : entity['quote_count'],  \n",
+    "                            'reply_count' : entity['reply_count'],\n",
+    "                            'retweet_count' : entity['retweet_count'],\n",
+    "                            'favorite_count' : entity['favorite_count'],\n",
+    "                            'timestamp' : entity['timestamp_ms']\n",
+    "                            }\n",
+    "                        collection.insert_one(record) # Insert the retweeted information \n",
+    "                    else :\n",
+    "                        record = {  \n",
+    "                            '_id' : entity['id'],\n",
+    "                            'retweet' : 'yes',\n",
+    "                            'original_id' : entity['retweeted_status']['id'],\n",
+    "                            'text': entity['retweeted_status']['extended_tweet']['full_text'], \n",
+    "                            'user_id' : entity['user']['id'],\n",
+    "                            'coordinates' : entity['coordinates'],\n",
+    "                            'quote_count' : entity['quote_count'],  \n",
+    "                            'reply_count' : entity['reply_count'],\n",
+    "                            'retweet_count' : entity['retweet_count'],\n",
+    "                            'favorite_count' : entity['favorite_count'],\n",
+    "                            'timestamp' : entity['timestamp_ms']\n",
+    "                            }\n",
+    "                        collection.insert_one(record) # Insert the retweeted information \n",
+    "                        \n",
+    "            ## If 'text' does not start with 'RT'\n",
+    "            else:\n",
+    "                if entity['extended_tweet']['full_text'] is None :\n",
+    "                    record =  {\n",
+    "                            '_id' : entity['id'],\n",
+    "                            'text': entity['text'],\n",
+    "                            'user_id' : entity['user']['id'],\n",
+    "                            'coordinates' : entity['coordinates'],\n",
+    "                            'quote_count' : entity['quote_count'],  \n",
+    "                            'reply_count' : entity['reply_count'],\n",
+    "                            'retweet_count' : entity['retweet_count'],\n",
+    "                            'favorite_count' : entity['favorite_count'],\n",
+    "                            'timestamp' : entity['timestamp_ms']\n",
+    "                            }\n",
+    "                    collection.insert_one(record) ## Inserting tweet information\n",
+    "                else :\n",
+    "                    record = {\n",
+    "                            '_id' : entity['id'],\n",
+    "                            'text': entity['extended_tweet']['full_text'],\n",
+    "                            'user_id' : entity['user']['id'],\n",
+    "                            'coordinates' : entity['coordinates'],\n",
+    "                            'quote_count' : entity['quote_count'], \n",
+    "                            'reply_count' : entity['reply_count'],\n",
+    "                            'retweet_count' : entity['retweet_count'],\n",
+    "                            'favorite_count' : entity['favorite_count'],\n",
+    "                            'timestamp' : entity['timestamp_ms']\n",
+    "                            }\n",
+    "                    collection.insert_one(record) ## Inserting tweet information \n",
+    "                    \n",
+    "        except:\n",
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c1009d73",
    "metadata": {},
    "source": [
@@ -61,23 +211,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "26be2d6f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'corona-out-3'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m num_line \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcorona-out-3\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f1:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f1:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "File \u001b[0;32m~/Documents/GitHub/stat-694-spring-2023-team2-final-project/.venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    277\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    278\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    279\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    281\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m     )\n\u001b[0;32m--> 284\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'corona-out-3'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_line = 0\n",
     "with open(\"corona-out-3\", \"r\") as f1:\n",
