--- a/utils/twitter-users.ipynb
+++ b/utils/twitter-users.ipynb
@@ -29,26 +29,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2"
+    "import psycopg2\n",
+    "import getpass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# prompting username input from the user\n",
-    "username = input(\"Please enter your computer's username: \")"
+    "username = getpass.getuser()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +58,7 @@
        "'varshiniyanamandra'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {
     "scrolled": false
    },
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,368 +343,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>screen_name</th>\n",
-       "      <th>location</th>\n",
-       "      <th>created_at</th>\n",
-       "      <th>followers_count</th>\n",
-       "      <th>friends_count</th>\n",
-       "      <th>statuses_count</th>\n",
-       "      <th>favourites_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>804046791348015107</td>\n",
-       "      <td>Bi Sex Uau</td>\n",
-       "      <td>B_King69</td>\n",
-       "      <td>Acre, Brasil</td>\n",
-       "      <td>2016-11-30 19:37:48</td>\n",
-       "      <td>89</td>\n",
-       "      <td>173</td>\n",
-       "      <td>4728</td>\n",
-       "      <td>5446</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2242948745</td>\n",
-       "      <td>Thomas Krause</td>\n",
-       "      <td>tho1965</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2013-12-25 09:13:33</td>\n",
-       "      <td>173</td>\n",
-       "      <td>685</td>\n",
-       "      <td>1865</td>\n",
-       "      <td>2184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>908326492718764034</td>\n",
-       "      <td>शचीन्द्र पाण्डेय</td>\n",
-       "      <td>im_S_pandey</td>\n",
-       "      <td>Amethi Uttar Pradesh</td>\n",
-       "      <td>2017-09-14 13:48:06</td>\n",
-       "      <td>2362</td>\n",
-       "      <td>202</td>\n",
-       "      <td>48906</td>\n",
-       "      <td>30668</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>207809313</td>\n",
-       "      <td>BJP</td>\n",
-       "      <td>BJP4India</td>\n",
-       "      <td>6-A, Deen Dayal Upadhyay Marg,</td>\n",
-       "      <td>2010-10-26 02:19:07</td>\n",
-       "      <td>13481667</td>\n",
-       "      <td>3</td>\n",
-       "      <td>200315</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2929344220</td>\n",
-       "      <td>Ralf Schmitz</td>\n",
-       "      <td>RusticusArat</td>\n",
-       "      <td>🇩4790 Provinz</td>\n",
-       "      <td>2014-12-18 10:19:26</td>\n",
-       "      <td>778</td>\n",
-       "      <td>733</td>\n",
-       "      <td>30551</td>\n",
-       "      <td>32024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1206650133976408064</td>\n",
-       "      <td>Büşra Öztaş</td>\n",
-       "      <td>schrodingerk42</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-12-16 18:59:53</td>\n",
-       "      <td>318</td>\n",
-       "      <td>220</td>\n",
-       "      <td>405</td>\n",
-       "      <td>1974</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1248123252</td>\n",
-       "      <td>minhyuk.</td>\n",
-       "      <td>mizhyuklee</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2013-03-07 07:21:32</td>\n",
-       "      <td>1194</td>\n",
-       "      <td>538</td>\n",
-       "      <td>157680</td>\n",
-       "      <td>1241</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>858859031464751104</td>\n",
-       "      <td>Monsta X Europe</td>\n",
-       "      <td>MonstaXEurope</td>\n",
-       "      <td>let the haters bark</td>\n",
-       "      <td>2017-05-01 01:42:04</td>\n",
-       "      <td>27085</td>\n",
-       "      <td>463</td>\n",
-       "      <td>38045</td>\n",
-       "      <td>32014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>50993809</td>\n",
-       "      <td>🇮🇹Henry Whites♥️</td>\n",
-       "      <td>Enrico_Bianchi</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2009-06-26 09:37:39</td>\n",
-       "      <td>1165</td>\n",
-       "      <td>1840</td>\n",
-       "      <td>42671</td>\n",
-       "      <td>22923</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>761787475</td>\n",
-       "      <td>Maurizio Gustinicchi</td>\n",
-       "      <td>gustinicchi</td>\n",
-       "      <td>www.scenarieconomici.it</td>\n",
-       "      <td>2012-08-16 15:43:06</td>\n",
-       "      <td>13459</td>\n",
-       "      <td>7886</td>\n",
-       "      <td>85444</td>\n",
-       "      <td>185978</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>792325679354417152</td>\n",
-       "      <td>Balu Pspk</td>\n",
-       "      <td>Balu54368353</td>\n",
-       "      <td>Chirala, India</td>\n",
-       "      <td>2016-10-29 11:22:17</td>\n",
-       "      <td>221</td>\n",
-       "      <td>311</td>\n",
-       "      <td>28240</td>\n",
-       "      <td>75133</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2719753171</td>\n",
-       "      <td>Pawan Kalyan</td>\n",
-       "      <td>PawanKalyan</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2014-08-09 17:06:12</td>\n",
-       "      <td>3957996</td>\n",
-       "      <td>161</td>\n",
-       "      <td>1408</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1091660129894838272</td>\n",
-       "      <td>Milli teknoloji</td>\n",
-       "      <td>milliteknoloj</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-02-02 11:30:31</td>\n",
-       "      <td>2294</td>\n",
-       "      <td>6709</td>\n",
-       "      <td>393</td>\n",
-       "      <td>352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>375777294</td>\n",
-       "      <td>TeéLaneeë🌺</td>\n",
-       "      <td>TWD40_</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2011-09-18 18:25:43</td>\n",
-       "      <td>637</td>\n",
-       "      <td>408</td>\n",
-       "      <td>18976</td>\n",
-       "      <td>1325</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>469083492</td>\n",
-       "      <td>J.</td>\n",
-       "      <td>menggyeuxxxxxx</td>\n",
-       "      <td>Universe</td>\n",
-       "      <td>2012-01-20 06:39:33</td>\n",
-       "      <td>916</td>\n",
-       "      <td>3981</td>\n",
-       "      <td>172486</td>\n",
-       "      <td>71272</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>1120761000561606656</td>\n",
-       "      <td>🌸</td>\n",
-       "      <td>cloudseokjinie</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-04-23 18:47:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17</td>\n",
-       "      <td>667</td>\n",
-       "      <td>1957</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>865733987561381888</td>\n",
-       "      <td>ANH</td>\n",
-       "      <td>BritishKatieKim</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2017-05-20 01:00:42</td>\n",
-       "      <td>142</td>\n",
-       "      <td>881</td>\n",
-       "      <td>19129</td>\n",
-       "      <td>244132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1132273796138905600</td>\n",
-       "      <td>Terri Kamp</td>\n",
-       "      <td>RampTheresa</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-05-25 13:14:44</td>\n",
-       "      <td>1522</td>\n",
-       "      <td>256</td>\n",
-       "      <td>20861</td>\n",
-       "      <td>29166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1044295463267119104</td>\n",
-       "      <td>Peter Noß-Kolbe</td>\n",
-       "      <td>nosskolbe</td>\n",
-       "      <td>Kloster Loccum&amp;Hildesheim</td>\n",
-       "      <td>2018-09-24 18:40:15</td>\n",
-       "      <td>311</td>\n",
-       "      <td>455</td>\n",
-       "      <td>4639</td>\n",
-       "      <td>2486</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>19991170</td>\n",
-       "      <td>Evangelisch.de</td>\n",
-       "      <td>evangelisch_de</td>\n",
-       "      <td>Frankfurt am Main</td>\n",
-       "      <td>2009-02-03 18:28:06</td>\n",
-       "      <td>11892</td>\n",
-       "      <td>865</td>\n",
-       "      <td>28019</td>\n",
-       "      <td>1230</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     id                  name      screen_name   \n",
-       "0    804046791348015107            Bi Sex Uau         B_King69  \\\n",
-       "1            2242948745         Thomas Krause          tho1965   \n",
-       "2    908326492718764034      शचीन्द्र पाण्डेय      im_S_pandey   \n",
-       "3             207809313                   BJP        BJP4India   \n",
-       "4            2929344220          Ralf Schmitz     RusticusArat   \n",
-       "5   1206650133976408064           Büşra Öztaş   schrodingerk42   \n",
-       "6            1248123252              minhyuk.       mizhyuklee   \n",
-       "7    858859031464751104       Monsta X Europe    MonstaXEurope   \n",
-       "8              50993809      🇮🇹Henry Whites♥️   Enrico_Bianchi   \n",
-       "9             761787475  Maurizio Gustinicchi      gustinicchi   \n",
-       "10   792325679354417152             Balu Pspk     Balu54368353   \n",
-       "11           2719753171          Pawan Kalyan      PawanKalyan   \n",
-       "12  1091660129894838272       Milli teknoloji    milliteknoloj   \n",
-       "13            375777294            TeéLaneeë🌺           TWD40_   \n",
-       "14            469083492                    J.   menggyeuxxxxxx   \n",
-       "15  1120761000561606656                     🌸   cloudseokjinie   \n",
-       "16   865733987561381888                   ANH  BritishKatieKim   \n",
-       "17  1132273796138905600            Terri Kamp      RampTheresa   \n",
-       "18  1044295463267119104       Peter Noß-Kolbe        nosskolbe   \n",
-       "19             19991170        Evangelisch.de   evangelisch_de   \n",
-       "\n",
-       "                          location          created_at  followers_count   \n",
-       "0                     Acre, Brasil 2016-11-30 19:37:48               89  \\\n",
-       "1                             None 2013-12-25 09:13:33              173   \n",
-       "2             Amethi Uttar Pradesh 2017-09-14 13:48:06             2362   \n",
-       "3   6-A, Deen Dayal Upadhyay Marg, 2010-10-26 02:19:07         13481667   \n",
-       "4                   🇩4790 Provinz  2014-12-18 10:19:26              778   \n",
-       "5                             None 2019-12-16 18:59:53              318   \n",
-       "6                             None 2013-03-07 07:21:32             1194   \n",
-       "7              let the haters bark 2017-05-01 01:42:04            27085   \n",
-       "8                             None 2009-06-26 09:37:39             1165   \n",
-       "9          www.scenarieconomici.it 2012-08-16 15:43:06            13459   \n",
-       "10                  Chirala, India 2016-10-29 11:22:17              221   \n",
-       "11                            None 2014-08-09 17:06:12          3957996   \n",
-       "12                            None 2019-02-02 11:30:31             2294   \n",
-       "13                            None 2011-09-18 18:25:43              637   \n",
-       "14                        Universe 2012-01-20 06:39:33              916   \n",
-       "15                            None 2019-04-23 18:47:00                0   \n",
-       "16                            None 2017-05-20 01:00:42              142   \n",
-       "17                            None 2019-05-25 13:14:44             1522   \n",
-       "18       Kloster Loccum&Hildesheim 2018-09-24 18:40:15              311   \n",
-       "19               Frankfurt am Main 2009-02-03 18:28:06            11892   \n",
-       "\n",
-       "    friends_count  statuses_count  favourites_count  \n",
-       "0             173            4728              5446  \n",
-       "1             685            1865              2184  \n",
-       "2             202           48906             30668  \n",
-       "3               3          200315                 0  \n",
-       "4             733           30551             32024  \n",
-       "5             220             405              1974  \n",
-       "6             538          157680              1241  \n",
-       "7             463           38045             32014  \n",
-       "8            1840           42671             22923  \n",
-       "9            7886           85444            185978  \n",
-       "10            311           28240             75133  \n",
-       "11            161            1408                 2  \n",
-       "12           6709             393               352  \n",
-       "13            408           18976              1325  \n",
-       "14           3981          172486             71272  \n",
-       "15             17             667              1957  \n",
-       "16            881           19129            244132  \n",
-       "17            256           20861             29166  \n",
-       "18            455            4639              2486  \n",
-       "19            865           28019              1230  "
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# user_df.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
