--- a/tweets_to_mongoDB.ipynb
+++ b/tweets_to_mongoDB.ipynb
@@ -100,17 +100,7 @@
     "                               'favorite_count' : entity['retweeted_status']['favorite_count'],\n",
     "                               'timestamp' : entity['retweeted_status']['timestamp_ms']\n",
     "                                 }\n",
-    "                        collection.insert_one({ \n",
-    "                               '_id' : entity['retweeted_status']['id'],\n",
-    "                               'text': entity['retweeted_status']['text'],\n",
-    "                               'user_id' : entity['retweeted_status']['user']['id'],\n",
-    "                               'coordinates' : entity['retweeted_status']['coordinates'],\n",
-    "                               'quote_count' : entity['retweeted_status']['quote_count'], \n",
-    "                               'reply_count' : entity['retweeted_status']['reply_count'],\n",
-    "                               'retweet_count' : entity['retweeted_status']['retweet_count'],\n",
-    "                               'favorite_count' : entity['retweeted_status']['favorite_count'],\n",
-    "                               'timestamp' : entity['retweeted_status']['timestamp_ms']\n",
-    "                                 }) # Insert the original tweet information\n",
+    "                        collection.insert_one(record) # Insert the original tweet information\n",
     "                        record = {  \n",
     "                            '_id' : entity['id'],\n",
     "                            'retweet' : 'yes',\n",
