--- a/src/utils/twitter-users.ipynb
+++ b/src/utils/twitter-users.ipynb
@@ -318,6 +318,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create separate indices for id and screen_name\n",
+    "cur.execute(\"CREATE INDEX idx_user_id ON TwitterUser (id);\")\n",
+    "cur.execute(\"CREATE INDEX idx_user_screen_name ON TwitterUser (screen_name);\")\n",
+    "\n",
+    "# Commit changes and close connection\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
