Added authors for ipynb notebooks

--- a/src/utils/twitter-users.ipynb
+++ b/src/utils/twitter-users.ipynb
@@ -22,6 +22,7 @@
    "metadata": {},
    "source": [
     "# Set up your PostgreSQL server\n",
+    "Author: Jiechun Lin\n",
     "1.    Download and install Postgres.app from https://postgresapp.com/\n",
     "2.   Open Postgres.app, toggle \"start\".\n",
     "3.   Execute the code below to extract the records. Ensure that the files \"corona-out-3\" and \"corona-out-3\" are placed in the same working directory."
