--- a/src/utils/tweets_to_mongoDB.ipynb
+++ b/src/utils/tweets_to_mongoDB.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6fff632d",
+   "metadata": {},
+   "source": [
+    "Author: Vishal Reddy Mekala"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "caf9d014",
@@ -1335,7 +1343,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -1349,7 +1357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
@@ -1379,6 +1387,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a58abfc0a7e00544aa0865de436a46ff5d623065a7bb5042b88f22cc5a6fce75"
+   }
   }
  },
  "nbformat": 4,
